cif/org.eclipse.escet.cif.tests/tests/cif2plc/negative_zero_iec/proj12_TupleStruct_1.plcfunc
FUNCTION proj12_TupleStruct_1: LREAL
VAR_INPUT
    tuple: TupleStruct_1;
END_VAR

proj12_TupleStruct_1 := tuple.field12;
END_FUNCTION
